--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "nodemon --exec babel-node src/server.js"
   },
   "repository": {
     "type": "git",
@@ -18,6 +18,13 @@
   },
   "homepage": "https://github.com/hungdeptrai99/nodejs-basic#readme",
   "dependencies": {
-    "express": "^4.18.2"
+    "@babel/core": "7.20.5",
+    "@babel/node": "7.20.5",
+    "@babel/preset-env": "7.20.2",
+    "body-parser": "1.19.0",
+    "dotenv": "^16.0.3",
+    "ejs": "3.1.6",
+    "express": "^4.18.2",
+    "nodemon": "^2.0.12"
   }
 }
