--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "dotenv": "^16.0.3",
     "ejs": "3.1.6",
     "express": "^4.18.2",
+    "mysql2": "^2.3.3",
     "nodemon": "^2.0.12"
   }
 }
