--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "dotenv": "^16.0.3",
     "ejs": "3.1.6",
     "express": "^4.18.2",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.8.0",
     "mysql2": "^2.3.3",
-    "nodemon": "^2.0.12"
+    "nodemon": "^2.0.12",
+    "parse-headers": "^2.0.5"
   }
 }
